main/default/objects/Phoenix_Account_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Phoenix Account Transactions</relationshipLabel>
    <relationshipName>Phoenix_Account_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>