main/default/objects/Phoenix_Account_Transaction__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Create, Update, Delete</description>
    <label>Action</label>
    <length>30</length>
    <type>Text</type>
</CustomField>