main/default/objects/Phoenix_Account_Transaction__c/fields/Customer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Detail</label>
    <referenceTo>Customer_Detail__c</referenceTo>
    <relationshipLabel>Phoenix Account Transactions</relationshipLabel>
    <relationshipName>Phoenix_Account_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>