main/default/objects/Phoenix_Account_Transaction__c/fields/Field_History__c.field-meta.xml
<CustomField>
    <fullName>Field_History__c</fullName>
    <label>Field History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>