main/default/objects/Phoenix_Account_Transaction__c/fields/ICC_Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>ICC_Subscriber_ID__c</fullName>
    <label>ICC Subscriber ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>