main/default/objects/Phoenix_Account_Transaction__c/fields/In_Queue__c.field-meta.xml
<CustomField>
    <fullName>In_Queue__c</fullName>
    <description>Y or N</description>
    <label>In Queue</label>
    <length>1</length>
    <type>Text</type>
</CustomField>