main/default/objects/Phoenix_Account_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Pending, Sent, Completed, Error, Requeued</description>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>