main/default/objects/Phoenix_Account_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Detail__c</columns>
    <columns>Action__c</columns>
    <columns>In_Queue__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Note__c</columns>
    <columns>Process_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>